--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,6 +7,7 @@
   "license": "GPL-3.0",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
+  "module": "src/index.ts",
   "scripts": {
     "clean": "rimraf ./lib",
     "test": "mocha --parallel",
@@ -20,6 +21,7 @@
     "node": "14"
   },
   "files": [
+    "src",
     "lib",
     "!**/*.spec.ts",
     "!**/*.spec.d.ts",
