minor bib updates

--- a/.github/workflows/latexcompile.yml
+++ b/.github/workflows/latexcompile.yml
@@ -1,5 +1,6 @@
-name: Build LaTeX document
-on: 
+name: build yellowpaper
+
+on:
   push:
     paths:
       'docs/yellowpaper/**/*.tex'
@@ -10,6 +11,7 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
+
       - name: Compile LaTeX document
         uses: xu-cheng/texlive-action/small@v1
         with:
@@ -22,13 +24,14 @@ jobs:
             latexmk -pdf
             latexmk -c
             mv main.pdf yellowpaper.pdf
-      - name: Commit latest version
+
+      - name: Commit generated .pdf file
         run: |
           git config --global user.email "noreply@hoprnet.org"
           git config --global user.name "HOPR LaTeX build robot"
           git add docs/yellowpaper/yellowpaper.pdf
-          git commit -a -m "Update yellowpaper" || true
-          git pull origin ${{ github.ref }}
+          git commit -a -m "chore(build): update yellowpaper" || true
+          git pull origin ${{ github.ref }} --rebase
           git push origin ${{ github.ref }}
       # This should go into a release workflow
       # - name: Get the version
