--- a/packages/connect/package.json
+++ b/packages/connect/package.json
@@ -20,8 +20,9 @@
   ],
   "scripts": {
     "clean": "rimraf ./lib ./tsconfig.tsbuildinfo ./tests/tsconfig.tsbuildinfo",
+    "coverage": "nyc --reporter=html mocha",
     "build": "yarn clean && tsc -p .",
-    "test": "mocha --parallel --full-trace",
+    "test": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=strict\" mocha --reporter=tap --full-trace",
     "prepublishOnly": "yarn clean && tsc -p ./tsconfig.npm.json"
   },
   "dependencies": {
@@ -59,6 +60,7 @@
     "libp2p-interfaces": "2.0.0",
     "libp2p-mplex": "0.10.4",
     "mocha": "9.1.3",
+    "nyc": "^15.1.0",
     "prettier": "2.5.0",
     "rimraf": "3.0.2",
     "ts-node": "10.4.0",
